aggiunta interattività con le schede livelli

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".view.SettingsActivity"
             android:exported="false"
-            android:label="@string/title_activity_settings" />
+            android:label="@string/title_activity_settings"
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.LevelsActivity"
