--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,24 +15,24 @@
         tools:targetApi="31">
         <activity
             android:theme="@style/Theme.2048Colors.ActionBar"
-            android:name=".view.SettingsActivity"
-            android:parentActivityName=".view.MainActivity" />
+            android:name=".view.activities.SettingsActivity"
+            android:parentActivityName=".view.activities.MainActivity" />
             android:exported="false"
             android:label="@string/title_activity_settings"
             android:screenOrientation="portrait" />
         <activity
             android:theme="@style/Theme.2048Colors.ActionBar"
-            android:name=".view.LevelsActivity"
-            android:parentActivityName=".view.MainActivity" />
+            android:name=".view.activities.LevelsActivity"
+            android:parentActivityName=".view.activities.MainActivity" />
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".view.GameActivity"
+            android:name=".view.activities.GameActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:parentActivityName=".view.MainActivity" />/>
+            android:parentActivityName=".view.activities.MainActivity" />/>
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.activities.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
