--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,24 @@
         android:theme="@style/Theme.2048Colors"
         tools:targetApi="31">
         <activity
-            android:theme="@style/Theme.2048Colors.ActionBar"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"
             android:name=".view.activities.SettingsActivity"
-            android:parentActivityName=".view.activities.MainActivity" />
+            android:parentActivityName=".view.activities.MainActivity"
             android:exported="false"
+            android:excludeFromRecents="true"
             android:label="@string/title_activity_settings"
             android:screenOrientation="portrait" />
         <activity
             android:theme="@style/Theme.2048Colors.ActionBar"
             android:name=".view.activities.LevelsActivity"
-            android:parentActivityName=".view.activities.MainActivity" />
+            android:parentActivityName=".view.activities.MainActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.activities.GameActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:parentActivityName=".view.activities.MainActivity" />/>
+            android:parentActivityName=".view.activities.MainActivity" />
         <activity
             android:name=".view.activities.MainActivity"
             android:exported="true"
@@ -41,6 +42,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".utils.BackgroundMusicService"
+            android:enabled="true" />
 
         <meta-data
             android:name="preloaded_fonts"
