--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,10 +15,10 @@
             android:name=".view.activities.TutorialActivity"
             android:exported="false"
             android:label="@string/title_activity_tutorial"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:parentActivityName=".view.activities.MainActivity"
-            android:theme="@style/Theme.2048Colors.ActionBar"
-            />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.2048Colors.ActionBar" />
         <activity
             android:name=".view.activities.SettingsActivity"
             android:excludeFromRecents="true"
